--- a/RecoveryChanger_app/src/main/res/values/styles.xml
+++ b/RecoveryChanger_app/src/main/res/values/styles.xml
@@ -6,10 +6,22 @@
         <item name="colorPrimary">@color/md_indigo_500</item>
         <item name="colorPrimaryDark">@color/md_indigo_700</item>
         <item name="colorButtonNormal">@color/md_indigo_400</item>
+        <item name="colorAccent">@color/md_indigo_500</item>
+        <item name="alertDialogTheme">@style/dialog</item>
     </style>
 
     <style name="RedButtonStyle" parent="Theme.AppCompat.NoActionBar">
         <item name="colorButtonNormal">@color/md_red_400</item>
+    </style>
+
+    <style name="dialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/md_indigo_500</item>
+        <item name="android:windowTitleStyle">@style/TitleTextStyle</item>
+    </style>
+
+    <style name="TitleTextStyle">
+        <item name="android:textColor">@color/md_indigo_700</item>
+        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Title</item>
     </style>
 
 </resources>
